--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "5.0.1",
     "redux": "4.2.1",
     "redux-devtools-extension": "2.13.9",
+    "reselect": "^5.1.1",
     "shortid": "^2.2.17",
     "web-vitals": "^2.1.4"
   },
